# spotify-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  run.md  run.txt  spotify.sh
src/: auth.rs  follow.rs  helper.rs  lib.rs  library.rs  main.rs  options.rs  playlist.rs  query.rs  search.rs  song.rs  status.rs  track.rs  volume.rs
