[package]
name = "spotify-cli-rs"
version = "1.0.0"
edition = "2021"
authors = ["Anirudh Konidala", "Canchen Li"]
description = "UIUC CS 128 Honors FA 2024 Final Project - A Command Line Interface (CLI) tool for Spotify built using Rust" 
license = "MIT"
repository = "https://github.com/kidskoding/spotify-cli"
homepage = "https://github.com/kidskoding/spotify-cli"
keywords = ["spotify", "cli", "music"]
default-run = "spotify"

[[bin]]
name = "spotify"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
rspotify = { version = "0.13.3", features = ["env-file", "cli"] }
tokio = { version = "1.40.0", features = ["full"] }
serde_json = { version = "1.0" }
dotenv = "0.15.0"
futures-util = "0.3.31"
futures = "0.3"
dirs = "5.0.1"
